--- a/Project Front-end/startstream.html
+++ b/Project Front-end/startstream.html
@@ -15,7 +15,7 @@
       <!-- Custom fonts for this template-->
       <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
       <!-- Custom styles for this template-->
-      <link href="css/osahan.css" rel="stylesheet">
+      <link href="css/kf.css" rel="stylesheet">
    </head>
    <body id="page-top">
       <nav class="navbar navbar-expand navbar-light bg-white static-top osahan-nav sticky-top">
