--- a/public/index.html
+++ b/public/index.html
@@ -2,22 +2,12 @@
 <html lang="en">
   <head>
       <!-- tabIcon Icon -->
-      <link rel="icon" type="assets/image/png" href="assets/img/tabIcon.png">
+      <link rel="icon" type="assets/image/png" href="assets/img/tabIcon.png" />
       <!-- Bootstrap core CSS-->
-      <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+	  <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css">
       <!-- Custom fonts for this template-->
-      <link href="assets/vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
-      <!-- Custom styles for this template-->
-      <link href="assets/css/kf.css" rel="stylesheet">
-      <!-- Bootstrap core JavaScript-->
-      <script src="assets/vendor/jquery/jquery.min.js"></script>
-      <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-      <!-- Core plugin JavaScript-->
-      <script src="assets/vendor/jquery-easing/jquery.easing.min.js"></script>
-      <!-- Owl Carousel -->
-      <script src="assets/vendor/owl-carousel/owl.carousel.js"></script>
-      <!-- Custom scripts for all pages-->
-      <script src="assets/js/custom.js"></script>      
+      <link href="assets/vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css" />
+	  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>		  	  
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -33,4 +23,5 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
+  
 </html>
