Fix mobile view

--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+      <meta name="viewport" content="width=device-width,initial-scale=1.0">
       <!-- tabIcon Icon -->
       <link rel="icon" type="assets/image/png" href="assets/img/tabIcon.png" />
       <!-- Bootstrap core CSS-->
